--- a/.i3status.conf
+++ b/.i3status.conf
@@ -13,42 +13,47 @@ general {
 order += "disk /home/maciej"
 order += "volume master"
 order += "wireless _first_"
+order += "ethernet enp0s25"
 order += "battery 0"
 order += "cpu_usage"
 order += "tztime local"
 
 volume master {
-#	format = " VOL: %volume  " 
+#	format = " ♪: %volume  "
 	device = "default"
 	mixer = "Master"
 	mixer_idx = 0
 	# termsyn font
-	format = "VOL: %volume "
+	format = " %volume "
+  format_muted = " (%volume)"
 }
 wireless _first_ {
-        format_up = "Wifi: (%quality at %essid) %ip"
-        format_down = "Wifi: down"
+        format_up = " %quality %essid  IP:%ip"
+        format_down = ""
 }
 
 battery 0 {
         format = "%status %percentage %remaining"
         format_down = "No battery"
-        status_chr = "CHR"
-        status_bat = "BAT"
-        status_full = "FULL"
+        status_chr = "⚇"
+        status_bat = "⚡"
+        status_full = ""
         path = "/sys/class/power_supply/BAT%d/uevent"
         low_threshold = 10
 }
 
 tztime local {
-        format = "%Y-%m-%d %H:%M"
+        format = " %Y-%m-%d %H:%M"
+}
+
+ethernet enp0s25 {
+  format_up = "LAN %ip"
+  format_down = ""
 }
 
 cpu_usage{
         format = "CPU:%usage"
 }
 disk "/home/maciej" {
-    format = "SSD:%avail"
+    format = " %avail"
 }
-
-
