--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -1,24 +1,27 @@
-# Source - https://github.com/madbence/dotfiles/blob/master/compton.conf
 # Shadow
-shadow = false;      # Enabled client-side shadows on windows.
-no-dock-shadow = true;    # Avoid drawing shadows on dock/panel windows.
-no-dnd-shadow = true;   # Don't draw shadows on DND windows.
-clear-shadow = true;    # Zero the part of the shadow's mask behind the 
-        # window. Fix some weirdness with ARGB windows.
-shadow-radius = 3;    # The blur radius for shadows. (default 12)
-shadow-offset-x = -7;   # The left offset for shadows. (default -15)
-shadow-offset-y = -7;   # The top offset for shadows. (default -15)
-shadow-opacity = 0.7;   # The translucency for shadows. (default .75)
-# shadow-red = 0.0;   # Red color value of shadow. (0.0 - 1.0, defaults to 0)
-# shadow-green = 0.0;   # Green color value of shadow. (0.0 - 1.0, defaults to 0)
-# shadow-blue = 0.0;    # Blue color value of shadow. (0.0 - 1.0, defaults to 0)
-shadow-exclude = [ "i:a:terminator", "_GTK_FRAME_EXTENTS@:c","class_g ?= 'Notify-osd'" ];
-shadow-ignore-shaped = true;  # Avoid drawing shadow on all shaped windows
-        # (see also: --detect-rounded-corners)
+shadow = true;
+no-dock-shadow = true;
+no-dnd-shadow = true;
+clear-shadow = true;
 
+shadow-radius = 20;
+shadow-offset-x = -30;
+shadow-offset-y = 0;
+shadow-opacity = 0.8;
+shadow-red = 0.11;
+shadow-green = 0.12;
+shadow-blue = 0.13;
+shadow-exclude = [
+  "name = 'Notification'",
+  "_GTK_FRAME_EXTENTS@:c",
+  "class_g = 'i3-frame'",
+  "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
+  "!I3_FLOATING_WINDOW@:c"
+];
+shadow-ignore-shaped = true;
 # Opacity
-menu-opacity = 0.9;     # The opacity for menus. (default 1.0)
-inactive-opacity = 0.9;     # Default opacity of inactive windows. (0.0 - 1.0)
+menu-opacity = 1;     # The opacity for menus. (default 1.0)
+inactive-opacity = 0.99;     # Default opacity of inactive windows. (0.0 - 1.0)
 # active-opacity = 0.8;     # Default opacity for active windows. (0.0 - 1.0)
 # frame-opacity = 0.8;      # Opacity of window titlebars and borders. (0.1 - 1.0)
 # inactive-opacity-override = true; # Let inactive opacity set by 'inactive-opacity' overrides
@@ -40,14 +43,14 @@ blur-background-exclude = [ "window_type = 'dock'", "window_type = 'desktop'" ];
 # Fading
 fading = true;      # Fade windows during opacity changes.
 # fade-delta = 30;    # The time between steps in a fade in milliseconds. (default 10).
-fade-in-step = 0.03;    # Opacity change between steps while fading in. (default 0.028).
-fade-out-step = 0.03;   # Opacity change between steps while fading out. (default 0.03).
+fade-in-step = 0.1;    # Opacity change between steps while fading in. (default 0.028).
+fade-out-step = 0.1;   # Opacity change between steps while fading out. (default 0.03).
 # no-fading-openclose = true; # Avoid fade windows in/out when opening/closing.
 fade-exclude = [ "g:e:SMPlayer" ];   # Exclude conditions for fading.
 
 # Other
-backend = "xrender"   # Backend to use: "xrender" or "glx". GLX backend is typically
-#backend = "glx"   # Backend to use: "xrender" or "glx". GLX backend is typically
+#backend = "xrender"   # Backend to use: "xrender" or "glx". GLX backend is typically
+backend = "glx"   # Backend to use: "xrender" or "glx". GLX backend is typically
         # much faster but depends on a sane driver.
 mark-wmwin-focused = true;  # Try to detect WM windows and mark them as active.
 mark-ovredir-focused = true;  # Mark all non-WM but override-redirect windows active (e.g. menus).
@@ -59,10 +62,10 @@ detect-client-opacity = true; # Detect _NET_WM_OPACITY on client windows, useful
         # managers not passing _NET_WM_OPACITY of client windows to frame
         # windows.
 refresh-rate = 0;   # For --sw-opti: Specify refresh rate of the screen. 0 for auto.
-vsync = "none";   # "none", "drm", "opengl", "opengl-oml", "opengl-swc", "opengl-mswc" 
+vsync = "none";   # "none", "drm", "opengl", "opengl-oml", "opengl-swc", "opengl-mswc"
         # See man page for more details.
 dbe = false;      # Enable DBE painting mode. Rarely needed.
-paint-on-overlay = false; # Painting on X Composite overlay window. Recommended.
+paint-on-overlay = true; # Painting on X Composite overlay window. Recommended.
 sw-opti = false;    # Limit compton to repaint at most once every 1 / refresh_rate.
         # Incompatible with certain VSync methods.
 unredir-if-possible = false;  # Unredirect all windows if a full-screen opaque window is
@@ -78,13 +81,13 @@ invert-color-include = [ ]; # Conditions for windows to be painted with inverted
 # glx-no-stencil = true;  # Recommended.
 #glx-copy-from-front = false;  # Useful with --glx-swap-method,
 # glx-use-copysubbuffermesa = true; # Recommended if it works. Breaks VSync.
-# glx-no-rebind-pixmap = true;  # Recommended if it works.  
+# glx-no-rebind-pixmap = true;  # Recommended if it works.
 glx-swap-method = "undefined";  # See man page.
 
 # Window type settings
 wintypes:
 {
-  tooltip = { fade = true; shadow = false; opacity = 0.75; focus = true; };
+  tooltip = { fade = true; shadow = false; opacity = 0.99; focus = true; };
   # fade: Fade the particular type of windows.
   # shadow: Give those windows shadow
   # opacity: Default opacity for the type of windows.
