--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -5,14 +5,6 @@ border_left=0
 border_right=0
 border_bottom=3
 
-
-#[window]
-#command=xtitle -s
-#interval=persist
-#separator=true
-#separator_block_width=45
-#border=#ebdbb2
-
 [volume]
 label=  
 command=[[ -z "${BLOCK_BUTTON}" ]] || ( [[ "${BLOCK_BUTTON}" == "1" ]] && ((/usr/bin/pavucontrol -t 3 --name "pavucontrol-bar" || true) && $HOME/.scripts/volume_control.py signal)); $HOME/.scripts/volume_control.py i3blocks
@@ -34,11 +26,28 @@ command=[[ -z "$(iwgetid -r)" ]] || echo "$(iwgetid -r) "
 interval=1
 border=#27ae60
 
+#[traffic]
+#command=$HOME/.scripts/traffic
+#interval=1
+#border=#275c6f
+
 [battery]
 label=
 command=$HOME/.scripts/battery.sh
 interval=5
 border=#f1c40f
+
+[memory]
+label=
+command=$HOME/.scripts/memory.sh
+interval=5
+border=#f124Ff
+
+[cpu]
+label=CPU
+command=$HOME/.scripts/cpu
+interval=1
+border=#f02923
 
 [time]
 label=  
