--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -1,17 +1,18 @@
 separator=false
-separator_block_width=5
-border_top=0
+separator_block_width=10
+border_top=2
 border_left=0
 border_right=0
-border_bottom=3
+border_bottom=0
 
 [volume]
 label=  
-command=[[ -z "${BLOCK_BUTTON}" ]] || ( [[ "${BLOCK_BUTTON}" == "1" ]] && ((/usr/bin/pavucontrol -t 3 --name "pavucontrol-bar" || true) && $HOME/.scripts/volume_control.py signal)); $HOME/.scripts/volume_control.py i3blocks
-interval=1
+command=amixer get Master | grep -E -o '[0-9]{1,3}?%' | head -1
+interval=once
 signal=1
 markup=pango
-border=#8e44ad
+border=#3983aa
+
 
 [brightness]
 label=  
@@ -41,18 +42,18 @@ border=#f1c40f
 label=
 command=$HOME/.scripts/memory.sh
 interval=5
-border=#f124Ff
+border=#3983aa
 
 [cpu]
 label=CPU
 command=$HOME/.scripts/cpu
 interval=1
-border=#f02923
+border=#d35400
 
 [time]
 label=  
 command=echo "`date +'%a %d %b'` <b>`date +'%T'`</b> "; [[ -z "${BLOCK_BUTTON}" ]] || gsimplecal &
 interval=1
 markup=pango
-border=#1abc9c
+border=#27ae60
 separator_block_width=0
